--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,9 @@ readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "fastapi[standard]>=0.115.12",
+    "google-genai>=1.12.1",
     "ngrok>=1.4.0",
+    "pyaudio>=0.2.14",
     "pydantic>=2.11.3",
     "python-dotenv>=1.1.0",
     "requests>=2.32.3",
