--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,10 +7,13 @@ requires-python = ">=3.11"
 dependencies = [
     "fastapi[standard]>=0.115.12",
     "google-genai>=1.12.1",
+    "jinja2>=3.1.6",
     "ngrok>=1.4.0",
     "pyaudio>=0.2.14",
     "pydantic>=2.11.3",
+    "pymongo>=4.12.0",
     "python-dotenv>=1.1.0",
     "requests>=2.32.3",
+    "twilio>=9.5.2",
     "websockets>=15.0.1",
 ]
