--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@ai-sdk/google": "^1.2.13",
+    "@ai-sdk/groq": "^1.2.8",
     "@radix-ui/react-slot": "^1.2.0",
     "ai": "^4.3.10",
     "class-variance-authority": "^0.7.1",
