--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,10 @@
 __pycache__/
 .env
+venv/
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env.development
+.env.test
+frontend/
