refactor: update variable names from domain to hostname for consistency in browser usage tracking

--- a/.env.example
+++ b/.env.example
@@ -5,3 +5,6 @@ NGROK_AUTHTOKEN=
 CANVAS_API_KEY=
 GOOGLE_API_KEY=
 MONGO_URL=
+RETELL_AGENT_ID_RESTRICTION=
+RETELL_AGENT_ID_REMINDER=
+RETELL_PHONE_NUMBER=
