--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.11"
 dependencies = [
     "apscheduler>=3.11.0",
     "fastapi[standard]>=0.115.12",
+    "fetchai>=0.1.41",
     "jinja2>=3.1.6",
     "langchain>=0.3.24",
     "ngrok>=1.4.0",
