--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "fastapi[standard]>=0.115.12",
     "jinja2>=3.1.6",
     "langchain>=0.3.24",
+    "logging>=0.4.9.6",
     "ngrok>=1.4.0",
     "pendulum>=3.1.0",
     "pipecat-ai[google,silero]>=0.0.65",
