--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ai-sdk/google": "^1.2.13",
     "@ai-sdk/groq": "^1.2.8",
+    "@opennextjs/cloudflare": "^1.0.0-beta.3",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/react-slot": "^1.2.0",
     "ai": "^4.3.10",
@@ -26,7 +27,8 @@
     "ogl": "^1.0.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "tailwind-merge": "^3.2.0"
+    "tailwind-merge": "^3.2.0",
+    "wrangler": "^4.13.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
