--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,11 +25,14 @@
     "gsap": "^3.12.5",
     "lucide-react": "^0.503.0",
     "matter-js": "^0.20.0",
+    "mongodb": "^6.16.0",
+    "mongoose": "^8.14.0",
     "motion": "^12.9.2",
     "next": "15.3.1",
     "ogl": "^1.0.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "recharts": "^2.15.3",
     "tailwind-merge": "^3.2.0",
     "wrangler": "^4.13.2"
   },
