--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,7 +15,9 @@
     "@ai-sdk/google": "^1.2.13",
     "@ai-sdk/groq": "^1.2.8",
     "@opennextjs/cloudflare": "^1.0.0-beta.3",
+    "@radix-ui/react-avatar": "^1.1.7",
     "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-progress": "^1.1.4",
     "@radix-ui/react-slot": "^1.2.0",
     "ai": "^4.3.10",
     "class-variance-authority": "^0.7.1",
