--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,10 +16,13 @@
     "@ai-sdk/groq": "^1.2.8",
     "@opennextjs/cloudflare": "^1.0.0-beta.3",
     "@radix-ui/react-icons": "^1.3.2",
+    "@radix-ui/react-scroll-area": "^1.2.6",
     "@radix-ui/react-slot": "^1.2.0",
+    "@radix-ui/react-tabs": "^1.1.9",
     "ai": "^4.3.10",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "date-fns": "^4.1.0",
     "framer-motion": "^12.9.2",
     "groq-sdk": "^0.20.1",
     "gsap": "^3.12.5",
